--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 Revision history for Compare-Directory
 
 1.18  Sun Sep 28 17:42:55 2014
-      - Added missing 'uae strict; use warnings;'
+      - Added missing 'use strict; use warnings;'
 
 1.17  Sun Sep 28 12:37:20 2014
       - Added secction "REPOSITORY" to the pod document.
