--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Compare-Directory
 
+1.20  Thu Jul 30 12:00:00 2015
+      - Added LICENSE file.
+
 1.19  Fri Jan 16 15:30:00 2015
       - Removed SIGNATURE file.
       - Updated MANIFEST.SKIP file to ignore folder 'eumm/'.
