--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Compare-Directory
 
+1.21  Fri Jul 31 12:00:00 2015
+      - Upgraded to use Test::Excel v1.35.
+
 1.20  Thu Jul 30 12:00:00 2015
       - Added LICENSE file.
 
