--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Compare::Directory
 
+1.24  Fri Oct 28 07:15:00 2016
+      - Added key 'provides' to the Makefile.PL script.
+
 1.23  Mon Aug 15 10:00:00 2016
       - Added missing pre-req Scalar::Util as reported by CPANTS.
       - Made "SEE ALSO" entries clickable.
