--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Compare::Directory
 
+1.26  Sun Oct 06 14:10:00 2019
+      - Moved author test scripts to xt/ subfolder.
+
 1.25  Sun Oct 30 08:50:00 2016
       - Added test scripts (t/meta-json.t andt t/meta-yml.t).
 
